--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width initial-scale=1">
     <meta name="description" content="Create and get free Nigerian CV image samples which you can share or submit for online jobs ">
-	  <meta name="keywords" content="Nosa CV, nigerian cv, curriculum vitae, CV, resume, cv samples in nigeria,academic cv template,sample of cv for job application">
+	  <meta name="keywords" content="Nosa CV, nigeria cv, work from home jobs in nigeria, accounting jobs in nigeria, lecturing jobs in nigeria, jobs in nigeria today, un jobs in nigeria, oil and gas jobs in nigeria, work from home jobs, google jobs, latest jobs in nigeria, remote jobs in nigeria, online jobs in nigeria, jobs near me, indeed jobs, indeed, jobs in abuja, abuja jobs, jobs in lagos, online jobs, remote jobs, jobs in nigeria, Making money, online jobs in nigeria that pays daily, legit online jobs that pay daily, online jobs work from home, online jobs for students, online jobs in nigeria, legit online jobs that pay daily, free cv template, latest cv format, cv format for job, cv format in nigeria, format of cv, cv builder free, what is the full meaning of cv, career objective for cv, cv maker, cv format in nigeria, full meaning of cv, what is the meaning of cv, cv template free, how to write cv for job, cv samples, sample of cv, how to write a cv, what is cv, Experience, Skill, Professional, Application for employment, meaning of cv, how to write cv, cv template, cv meaning, Writing, Résumé, Curriculum vitae, cv format, full meaning of cv, difference between cv and resume, what is the meaning of cv, cv format in nigeria, how to create a cv, nigeria cv generator, cv, cv samples in nigeria, academic cv template, sample of cv for job application">
   	<meta name="author" content="Nosa Omo">
   	<script src="JQUERY 3.5.1.js"></script>
   	<script src="ajax.js"></script>
@@ -169,7 +169,7 @@
 	    margin: 10px; }
 	    
 	  .big { 
-	    margin-top: 20px; 
+	    margin-top: 4px; 
 	    margin-bottom: 20px; 
 	    width: 80%; }
 	  
@@ -203,6 +203,7 @@
           <h1> NOSA CV </h1>
         </div>
       </div>
+        <h2> Nigeria CV generator </h2>
       </br>
       
       <div class="exDetails">
