--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="JQUERY 3.5.1.js"></script>
     <script src="ajax.js"></script>
     <script src="primo.js"></script>
-    <title>NOSA CV</title>
+    <title>NOSA CV: Streamline Your Job Search with Professional CVs</title>
   </head>
 	
   <script>
